# 005_fractional_new

./: pyproject.toml
src/fractional_new/: FractionalClass.py  __init__.py
tests/: test_fractionalclass.py
