[project]
name = "005-fractional-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mateusz", email = "mateusz.malinowski.1991@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
005-fractional-new = "005_fractional_new:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
